--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ document.addEventListener('DOMContentLoaded', function() {
   video.addEventListener('timeupdate', function() {
     var currentTime = video.currentTime;
 
-    if (currentTime >= 23 && currentTime <= 29.8) {
+    if (currentTime >= 28 && currentTime <= 36) {
       botonDireccion.style.opacity = '1'; // Mostrar el botón
       botonDireccion.style.pointerEvents = 'auto'; // Habilitar eventos de clic
     } else {
@@ -54,7 +54,7 @@ document.addEventListener('DOMContentLoaded', function() {
       botonDireccion.style.pointerEvents = 'none'; // Deshabilitar eventos de clic
     }
 
-    if (currentTime >= 37) {
+    if (currentTime >= 46) {
       botonAsistencia.style.opacity = '1'; // Mostrar el botón
       botonAsistencia.style.pointerEvents = 'auto'; // Habilitar eventos de clic
     } else {
@@ -118,7 +118,7 @@ document.addEventListener('DOMContentLoaded', function() {
   width: 200px;
   height: 35px;
   border-radius: 25px;
-  background-color: #FA7828;
+  background-color: #FF66C4;
   margin-bottom: 0px; /* Ajusta el valor según el espaciado deseado entre los botones */
   font-size: 12px;
   color: #ffffff;
@@ -132,7 +132,7 @@ document.addEventListener('DOMContentLoaded', function() {
   width: 200px;
   height: 35px;
   border-radius: 25px;
-  background-color: #FA7828;
+  background-color: #FF66C4;
   margin-bottom: 0px; /* Ajusta el valor según el espaciado deseado entre los botones */
   font-size: 12px;
   color: #ffffff;
@@ -157,14 +157,14 @@ document.addEventListener('DOMContentLoaded', function() {
 
     <div id="button-container">
 
-      <a id="boton-direccion" href="https://maps.app.goo.gl/ZAFBxN8LyVx1UKtD6"
+      <a id="boton-direccion" href="https://maps.app.goo.gl/vsLQfwghqydvPyS27"
         class="button fa-solid fa-location-dot"
         style="color: #ffffff;"> <i class="fas fa-map-marker-alt"></i> VER
         UBICACIÓN
       </a>
 
       <a id="boton-asistencia"
-        href="https://api.whatsapp.com/send?phone=+526141614951&text=%C2%A1Hola%21+Muchas+gracias+por+la+invitaci%C3%B3n%2C+ah%C3%AD+estaremos%21%21+%F0%9F%A5%B3"
+        href="https://api.whatsapp.com/send?phone=+525529729962&text=%C2%A1Hola%21+Muchas+gracias+por+la+invitaci%C3%B3n%2C+ah%C3%AD+estaremos%21%21+%F0%9F%A5%B3"
         class="button">
         <i class="fab fa-whatsapp"></i>CONFIRMAR ASISTENCIA</a>
     </div>
